--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <form id="form">
-            <input type="email" value="jhonatan@test.com" id="email" />
+            <input type="text" value="AGSN00125N" id="ParticipanteName" />
             <input type="password" value="123123" id="password" />
             <button type="submit">Acceder</button>
         </form>
@@ -16,7 +16,7 @@
         <script>
             const form = document.getElementById("form");
             const password = document.getElementById("password");
-            const email = document.getElementById("email");
+            const ParticipanteName = document.getElementById("ParticipanteName");
 
             form.addEventListener("submit", async (e) => {
                 e.preventDefault();
@@ -29,7 +29,7 @@
                                 "Content-Type": "application/json",
                             },
                             body: JSON.stringify({
-                                email: email.value,
+                                ParticipanteName: ParticipanteName.value,
                                 password: password.value,
                             }),
                         }
